client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");

.brand-logo {
  font-family: "Comfortaa", cursive;
  font-size: 4.5vw;
}

nav .brand-logo {
  position: static;
  transform: none;
  display: block;
}

nav i.material-icons {
  width: 20px;
  line-height: 67px;
}

.hamburger,
.navigation-menu,
.mobile-section {
  display: none;
  color: black;
}

@media screen and (max-width: 800px) {
  #nav-mobile {
    display: none;
  }
  .navigation-menu {
    margin-left: auto;
  }

  .navigation-menu ul {
    display: none;
    padding: 0;
  }

  .navigation-menu li {
    list-style-type: none;
    margin: 0 1rem;
  }

  .navigation-menu li a {
    text-decoration: none;
    display: block;
    width: 100%;
    font-size: 20px;
  }
  .hamburger,
  .mobile-section {
    display: block;
  }

  .mobile-nav-container {
    width: 80px;
    justify-content: space-between;
  }

  .navigation-menu ul {
    flex-direction: column;
    position: absolute;
    top: 71px;
    left: 0;
    width: 100%;
    height: fit-content;
    background-color: white;
    border-top: 1px solid black;
    display: none;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
      rgba(0, 0, 0, 0.23) 0px 6px 6px;
  }

  .navigation-menu li {
    text-align: center;
    margin: 0;
    border-top: solid black;
  }

  .navigation-menu li a {
    color: black;
    width: 100%;
    padding: 1.5rem 0;
  }

  .navigation-menu li:hover {
    background-color: #eee;
  }

  .navigation-menu.expanded {
    display: block;
  }
  .navigation-menu.expanded ul {
    display: flex;
    z-index: 100;
  }
}

.auth-card {
  padding: 20px;
  text-align: center;
  max-width: 30%;
  margin: 10px auto;
}

/* outline for focused input field */
.input-field input[type="text"]:focus,
.input-field input[type="password"]:focus {
  border-bottom: 1px solid #3f02f7 !important;
  box-shadow: 0 1px 0 0 #3f02f7;
}

/* photos & videos in profile */
.photo-item {
  height: 30%;
  width: 300px;
  margin: 20px;
}

.video-item {
  height: 150px;
  width: 150px;
  margin: 20px;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.home-card {
  max-width: 500px;
  margin: 26px auto;
  height: max-content;
  border-radius: 40px;
}

/* for 'toast' error */
#toast-container {
  top: 30px !important;
  left: 20px !important;
  right: auto !important;
}

/* hover transition for button */
button.bg-sky-300 {
  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
}

button.bg-sky-300:hover {
  background-color: rgb(76, 170, 191);
  color: white;
}

/* default styling */
h1 {
  font-size: 2em;
}
h2 {
  font-size: 1.5em;
}
h3 {
  font-size: 1.17em;
}
h4 {
  font-size: 1em;
}
h5 {
  font-size: 0.83em;
}
h6 {
  font-size: 0.67em;
}

/* media queries */
@media (max-width: 1280px) {
  /* font-size for log in logo */
  .brand-logo.sign-up {
    font-size: 6.5vw;
  }
}

@media (max-width: 800px) {
  #nav-mobile a {
    font-size: 2vw;
  }
}

